--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <style>
         @import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css');
+        @import url('https://use.fontawesome.com/releases/v5.8.2/css/all.css');
     </style>
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
 </head>
@@ -674,21 +675,21 @@
                                     <div class="container">
                                         <h2 class="title">Venue location</h2>
                                         <div class="row">
-                                            <div class="col-md-4">
+                                            <div class="col-md-6">
                                                 <div class="venue-detail">
                                                     <div class="venue-box">
-                                                        <span><img src=""></span>
-                                                        <div class="venue-desc"><span>Panaroma Garden, Cancer
-                                                                Gate</span>
-                                                            Bharatpur</div>
+                                                        <span class="fas fa-map-marked-alt"></span>
+                                                        <div class="venue-desc"><span>Panaroma Garden, Geetanagar
+                                                                Rd.</span>
+                                                            Bharatpur, Chitwan</div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-md-8">
+                                            <div class="col-md-6">
                                                 <div class="googlemaps">
                                                     <iframe
-                                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7067.629172826983!2d84.41032733790144!3d27.661207688954576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3994fae8aca1e90d%3A0x396b837ec734e382!2sPanaroma+Garden!5e0!3m2!1sen!2snp!4v1558197517068!5m2!1sen!2snp"
-                                                        width="400" height="300" frameborder="0" style="border:0"
+                                                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14135.435328112108!2d84.41198!3d27.659839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x396b837ec734e382!2sPanaroma+Garden!5e0!3m2!1sen!2snp!4v1558199006838!5m2!1sen!2snp"
+                                                        width="600" height="450" frameborder="0" style="border:0"
                                                         allowfullscreen></iframe>
                                                 </div>
                                             </div>
