--- a/index.html
+++ b/index.html
@@ -35,18 +35,12 @@
                                                             </div>
                                                         </a>
                                                     </div>
-                                                    <!-- <div class="schedule-box">
-                                                            <a href="https://2019.bharatpur.wordcamp.org/schedule/"
-                                                                title="Schedule">
-                                                                <span>Schedule</span>
-                                                            </a>
-                                                        </div> -->
                                                 </div>
                                                 <div class="col-md-3 col-xs-6 ">
                                                     <div class="card schedule-box">
                                                         <a href="#" title="Schedule">
                                                             <div class="card-body">
-                                                                <h5 class="card-text">Schedule</h5>
+                                                                <h5 class="card-text">Speakers</h5>
                                                             </div>
                                                         </a>
                                                     </div>
@@ -55,7 +49,7 @@
                                                     <div class="card schedule-box">
                                                         <a href="#" title="Schedule">
                                                             <div class="card-body">
-                                                                <h5 class="card-text">Schedule</h5>
+                                                                <h5 class="card-text">Attendees</h5>
                                                             </div>
                                                         </a>
                                                     </div>
@@ -65,7 +59,7 @@
                                                     <div class="card schedule-box">
                                                         <a href="#" title="Schedule">
                                                             <div class="card-body">
-                                                                <h5 class="card-text">Schedule</h5>
+                                                                <h5 class="card-text">Ticket</h5>
                                                             </div>
                                                         </a>
                                                     </div>
@@ -82,7 +76,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-8">
-                                                <p class="drop-cap"> Lorem ipsum dolor sit amet, consectetur adipiscing
+                                                <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing
                                                     elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                                                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                                                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
