--- a/index.html
+++ b/index.html
@@ -72,18 +72,22 @@
                                 <section id="explore-section">
                                     <div class="container">
                                         <div class="col-md-12">
-                                            <h2 class="title">Things to do</h2>
+                                            <h2 class="title">Welcome to WordCamp Bharatpur 2019</h2>
                                         </div>
                                         <div class="row">
                                             <div class="col-md-8">
-                                                <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                                                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                                    proident, sunt in culpa qui officia deserunt mollit anim id est
-                                                    laborum.</p> <br>
+                                                <p class="text">It's our great pleasure to announce that WordCamp
+                                                    Bharatpur is officially on the calendar!<br>
+
+                                                    WordPress Bharatpur is organizing WordCamp for the very first time
+                                                    at the year of 2019. We are very excited about celebrating
+                                                    everything WordPress here with ardour to learn, connect and
+                                                    contribute for WordPress and WordPress Community.<br>
+
+                                                    WordCamp Bharatpur is for everyone or anyone who uses or wants to
+                                                    learn WordPress Whether you are a new user, student, designer,
+                                                    developer, tech expert, entrepreneur, you can benefit from it.
+                                                </p> <br>
                                                 <div>
                                                     <a href="#" class="btn btn-primary" type="button">Explore more</a>
                                                     <a href="#" target="_blank" class="btn btn-primary" type="button"
