added col-md-6 to the speakers in homepage

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                                             <div class="wcorg-speakers">
                                                 <div class="row">
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -144,7 +144,7 @@
 
 
                                                     </div>
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -175,7 +175,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="row">
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -204,7 +204,7 @@
 
 
                                                     </div>
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -236,7 +236,7 @@
                                                 </div>
 
                                                 <div class="row">
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -265,7 +265,7 @@
 
 
                                                     </div>
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -311,7 +311,7 @@
 
                                             <div class="wcorg-speakers">
                                                 <div class="row">
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -342,7 +342,7 @@
 
 
                                                     </div>
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -375,7 +375,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="row">
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -406,7 +406,7 @@
 
 
                                                     </div>
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -440,7 +440,7 @@
                                                 </div>
 
                                                 <div class="row">
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
@@ -471,7 +471,7 @@
 
 
                                                     </div>
-                                                    <div class="col">
+                                                    <div class="col-md-6">
                                                         <!-- Organizers note: The id attribute is deprecated and only remains for backwards compatibility, please use the corresponding class to target individual speakers -->
                                                         <div id="wcorg-speaker-arun-pyasi"
                                                             class="wcorg-speaker wcorg-speaker-arun-pyasi">
